# rust-substrait

./: README.md
datafusion_api/: Cargo.toml
datafusion_api/src/: main.rs
